crates/reinhardt-pages/tests/ui/style/fail/duplicate_variable.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! {
	vars {
		accent: Color = red;
		accent: Color = blue;
	}
	.card {
		color: red;
	}
};
fn main() {}
